[Background Fetch] Pass off-the-record state to OfflineItems.

Bug: 863939
Change-Id: I54735be657f2b8841de09c0e67738cd1ded1bcf7
Reviewed-on: https://chromium-review.googlesource.com/1194077
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Rayan Kanso <rayankans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588361}
Former-commit-id: 55fd4b8a737bbe8c0ccfed411208ce3f4187aad4